--- a/src/app/styles/material-theme.scss
+++ b/src/app/styles/material-theme.scss
@@ -1,10 +1,15 @@
 @use '@angular/material' as mat;
 
-html {
-  color-scheme: light dark;
-  @include mat.theme((
-    color: mat.$violet-palette,
-    typography: Roboto,
-    density: 0
-  ));
-}
+$primary: mat.m2-define-palette(mat.$indigo-palette);
+$accent: mat.m2-define-palette(mat.$pink-palette);
+$warn: mat.m2-define-palette(mat.$red-palette);
+
+$theme: mat.m2-define-light-theme((
+  color: (
+    primary: $primary,
+    accent: $accent,
+    warn: $warn,
+  ),
+));
+
+@include mat.all-component-themes($theme);
