--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 @use 'styles/material-theme'; // ✅ Import Material theme
 
 @use 'styles/layout'; // ✅ without the underscore or file extension
-
+@use 'styles/links';
 
 //@use 'app/styles/typography';     // ✅ Import typography styles
 //@use 'app/styles/variables';      // ✅ Import global variables
@@ -24,5 +24,8 @@
 //}
 
 /* ✅ Global styles */
-html, body { height: 100%; }
+html, body {
+  height: 100%;
+  font-size: 14px;
+}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
