--- a/src/app/core/components/breadcrumb/breadcrumb.component.html
+++ b/src/app/core/components/breadcrumb/breadcrumb.component.html
@@ -1,3 +1,5 @@
-<div class="printable-area">
-  <a class="breadcrumb-link" href="javascript:void(0)">HOME</a>
+<div class="header-breadcrumb">
+  <div class="printable-area">
+    <a class="breadcrumb-link" href="javascript:void(0)">HOME</a>
+  </div>
 </div>
