--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,7 +4,7 @@ $spacing-unit: 8px;
 
 // _custom-palettes.scss
 $custom-blue-palette: (
-  50: #e3f2fd,
+  50: #ffffff,
   100: #bbdefb,
   200: #90caf9,
   300: #64b5f6,
