--- a/src/app/core/components/breadcrumb/breadcrumb.component.html
+++ b/src/app/core/components/breadcrumb/breadcrumb.component.html
@@ -1,5 +1,3 @@
-<div class="header-breadcrumb">
-  <div class="printable-area">
-    <a class="breadcrumb-link" href="javascript:void(0)">HOME</a>
-  </div>
+<div class="breadcrumb printable-area">
+  <a class="breadcrumb-link" href="javascript:void(0)">HOME</a>
 </div>
