--- a/src/app/core/components/home/home.component.html
+++ b/src/app/core/components/home/home.component.html
@@ -1,3 +1,22 @@
+<div class="printable-areax">
+  <div class="landing-title">
+    <h1>Welcome to AnovaSea</h1>
+  </div>
+</div>
+
 <div class="printable-area">
-anovasea.net is under construction.
+  <div class="landing-container">
+  <!-- Landing Page Title -->
+
+  <div class="landing-image">
+    <img src="assets/images/landing-image-001.jpg" alt="Anova Image">
+  </div>
+  <div class="landing-text">
+<!--    <h2>Welcome to AnovaSea</h2>-->
+    <p>
+      Anova simplifies your operations with powerful tools for managing reservations, POS, and guest experiences.
+      Explore how our system works seamlessly across sea and shore.
+    </p>
+  </div>
+</div>
 </div>
