--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,22 @@
-@use '../../node_modules/@angular/material/index' as mat;
+@use '@angular/material' as mat;
+@use 'sass:map';
+@use 'styles/themes' as theme;
 
 $spacing-unit: 8px;
+
+// special colors
+$fg-sea: #4dd0e1;
+//$fg-main: map.get(theme.$primary-palette, 40);
+$fg-main: map.get(theme.$neutral-palette, 40);
+
+//$primary-color: #0a3d62;
+//$accent-color: #ff6b6b;
+//$background-color: #f5f5f5;
+
+//$primary-bg: map.get(theme.$primary-palette, 40);
+//$primary-fg: white;
+
+
 
 // _custom-palettes.scss
 $custom-blue-palette: (
