--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,8 +34,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 h1 {
   font-size: 24px;
-  margin-bottom: 16px;
+  //margin-bottom: 0px;
 }
-body, p, span, div, h1, h2, h3, h4, h5, h6, mat-card, mat-toolbar {
-  color: variables.$fg-main;
-}
+//body, p, span, div, h1, h2, h3, h4, h5, h6, mat-card, mat-toolbar {
+//  color: variables.$fg-main;
+//}
