--- a/src/app/core/pages/page001/page001.component.html
+++ b/src/app/core/pages/page001/page001.component.html
@@ -1,3 +1,8 @@
-<div class="printable-area">
-  <p>page001 works!</p>
+<div class="banner">
+  <div class="banner-overlay"></div>
+  <div class="printable-area">
+    <div class="banner-content">
+      <app-hero></app-hero>
+    </div>
+  </div>
 </div>
