--- a/src/styles/_links.scss
+++ b/src/styles/_links.scss
@@ -26,6 +26,11 @@
   color: mat.m2-get-color-from-palette($custom-blue-palette, 50);
   margin-right:16px;
 }
+.logo-link {
+  text-decoration: none;
+  //color: mat.m2-get-color-from-palette($custom-blue-palette, 50);
+  //margin-right:16px;
+}
 
 .breadcrumb-link {
   @extend .nav-link;
