--- a/src/app/core/components/navigator/navigator.component.html
+++ b/src/app/core/components/navigator/navigator.component.html
@@ -1,7 +1,10 @@
+
+<div *ngIf="componentLoaded">
 <div class="printable-area error">
   <p>Page Not Defined</p>
   <ul>
     <li>Menu {{ selectedMenu?.menuId }}-{{ selectedMenu?.description }}</li>
     <li>Page {{ page?.pageId }}-{{ page?.description }}</li>
   </ul>
+</div>
 </div>
