--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@
 @use 'styles/variables';
 @use 'styles/layout'; // ✅ without the underscore or file extension
 @use 'styles/links';
+@use 'styles/banner';
 
 html {
   @include mat.theme((
