--- a/src/app/core/pages/page004/page004.component.html
+++ b/src/app/core/pages/page004/page004.component.html
@@ -1,15 +1,16 @@
 <div class="printable-area">
-  <div class="login-container">
-  <form (ngSubmit)="onSubmit()">
-    <input [(ngModel)]="username" name="username" autocomplete="username" required>
-    <input [(ngModel)]="password" name="password" autocomplete="current-password" required type="password" >
-    <button type="submit">Login</button>
-  </form>
+  <app-form-manager [formId]="FormConstants.LOGIN" [pk]="pk" ></app-form-manager>
+<!--  <div class="login-container">-->
+<!--  <form (ngSubmit)="onSubmit()">-->
+<!--    <input [(ngModel)]="username" name="username" autocomplete="username" required>-->
+<!--    <input [(ngModel)]="password" name="password" autocomplete="current-password" required type="password" >-->
+<!--    <button type="submit">Login</button>-->
+<!--  </form>-->
 
-  <div *ngIf="errorMessage" class="error">
-    {{ errorMessage }}
-  </div>
-</div>
+<!--  <div *ngIf="errorMessage" class="error">-->
+<!--    {{ errorMessage }}-->
+<!--  </div>-->
+<!--</div>-->
 </div>
 
-<app-form-manager [formId]="FormConstants.LOGIN" [action]="new"></app-form-manager>
+
