--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,8 @@
 @use 'styles/layout'; // ✅ without the underscore or file extension
 @use 'styles/links';
 @use 'styles/banner';
+@use 'styles/form';
+@use 'styles/material-overrides';
 
 html {
   @include mat.theme((
