--- a/src/app/core/components/form-manager/form-manager.component.html
+++ b/src/app/core/components/form-manager/form-manager.component.html
@@ -1,28 +1,81 @@
-<h3>{{form?.header}}</h3>
-<form [formGroup]="formGroup" (ngSubmit)="submitForm()" *ngIf="form">
+<form [formGroup]="formGroup" (ngSubmit)="submitForm()" *ngIf="form" class="material-form">
+  <div class="form-header">
+    <h3>{{ form?.header }}</h3>
+  </div>
+
   <div *ngFor="let control of form.formFields" class="form-row">
-<!--    <label>{{ control.label }}</label>-->
-
     <ng-container [ngSwitch]="control.typeId">
-      <app-widget-textbox
-        *ngSwitchCase="TypeConstants.CONTROL_TEXTBOX"
-        [field]="control"
-        [formGroup]="formGroup">
-      </app-widget-textbox>
+    <!-- Use the widget component for TEXTBOX -->
+    <app-widget-textbox
+      *ngSwitchCase="TypeConstants.CONTROL_TEXTBOX"
+      [field]="control"
+      [formGroup]="formGroup">
+    </app-widget-textbox>
 
+      <!-- TEXTBOX -->
+<!--      <mat-form-field *ngSwitchCase="TypeConstants.CONTROL_TEXTBOX" appearance="fill" class="full-width">-->
+<!--        <mat-label>{{ control.label }}</mat-label>-->
+<!--        <input matInput-->
+<!--               [type]="control.controlType || 'text'"-->
+<!--               [formControlName]="control.name"-->
+<!--               [id]="control.name"-->
+<!--               [placeholder]="control.placeholder || ''">-->
+
+<!--        <mat-error *ngIf="formGroup.get(control.name)?.hasError('required')">-->
+<!--          This field is required.-->
+<!--        </mat-error>-->
+<!--        &lt;!&ndash; Add more validation errors if you want &ndash;&gt;-->
+<!--      </mat-form-field>-->
+
+      <!-- HIDDEN -->
       <input *ngSwitchCase="TypeConstants.CONTROL_HIDDEN"
-        type="hidden"
-        [formControlName]="control.name"
-      >
+             type="hidden"
+             [formControlName]="control.name">
 
-      <!-- Not yet implemented types -->
-      <div *ngSwitchDefault class="unknown-type-warning">
-        ⚠️ {{ control.label }}: Type '{{ control.type.description }}' not defined yet!
+      <!-- UNKNOWN -->
+      <div *ngSwitchDefault class="unknown-type-warning mat-elevation-z2">
+        ⚠️ {{ control.label }}: Type '{{ control.type?.description }}' not defined yet!
       </div>
 
     </ng-container>
+
   </div>
-  <button type="submit">
+
+  <button
+    mat-raised-button
+    color="primary"
+    type="submit"
+    [disabled]="formGroup.invalid">
     {{ form.saveButtonLabel }}
   </button>
 </form>
+
+
+<!--<h3>{{form?.header}}</h3>-->
+<!--<form [formGroup]="formGroup" (ngSubmit)="submitForm()" *ngIf="form">-->
+<!--  <div *ngFor="let control of form.formFields" class="form-row">-->
+<!--&lt;!&ndash;    <label>{{ control.label }}</label>&ndash;&gt;-->
+
+<!--    <ng-container [ngSwitch]="control.typeId">-->
+<!--      <app-widget-textbox-->
+<!--        *ngSwitchCase="TypeConstants.CONTROL_TEXTBOX"-->
+<!--        [field]="control"-->
+<!--        [formGroup]="formGroup">-->
+<!--      </app-widget-textbox>-->
+
+<!--      <input *ngSwitchCase="TypeConstants.CONTROL_HIDDEN"-->
+<!--        type="hidden"-->
+<!--        [formControlName]="control.name"-->
+<!--      >-->
+
+<!--      &lt;!&ndash; Not yet implemented types &ndash;&gt;-->
+<!--      <div *ngSwitchDefault class="unknown-type-warning">-->
+<!--        ⚠️ {{ control.label }}: Type '{{ control.type.description }}' not defined yet!-->
+<!--      </div>-->
+
+<!--    </ng-container>-->
+<!--  </div>-->
+<!--  <button type="submit">-->
+<!--    {{ form.saveButtonLabel }}-->
+<!--  </button>-->
+<!--</form>-->
