--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -79,7 +79,6 @@
   }
 }
 
-
 .error {
   background-color: map.get(theme.$error-palette, 90);
   //color: #a94442;
@@ -87,4 +86,7 @@
   border-left: 4px solid map.get(theme.$error-palette, 25);
   border-radius: 4px;
   margin-bottom: 1rem;
+}
+.full-width {
+  width: 100%;
 }
